Evolution #601: Admin: re-création: Ajout de l'action de regeneration d'un element existant

--- a/src/Muzich/AdminBundle/Resources/config/Admin_element-generator.yml
+++ b/src/Muzich/AdminBundle/Resources/config/Admin_element-generator.yml
@@ -21,6 +21,8 @@ builders:
         new: ~
       object_actions:
         show: ~
+        regenerate:
+          route: Muzich_AdminBundle_Admin_element_regenerate
         edit: ~
         delete: ~
   filters:
