--- a/src/Muzich/AdminBundle/Resources/config/Admin_tag-generator.yml
+++ b/src/Muzich/AdminBundle/Resources/config/Admin_tag-generator.yml
@@ -38,8 +38,7 @@ builders:
   show:
     params:
       title: "You're viewing element \"%object%\"|{ %object%: Tag.name }|"
-      display:
-        "General" : [ name ]
+      display: [ name, slug ]
       actions:
         list: ~
         new: ~
