--- a/src/Muzich/AdminBundle/Resources/config/Admin_element_tags_proposition-generator.yml
+++ b/src/Muzich/AdminBundle/Resources/config/Admin_element_tags_proposition-generator.yml
@@ -13,6 +13,7 @@ builders:
       actions:
         new: ~
       object_actions:
+        show: ~
         edit: ~
         delete: ~
   filters:
@@ -21,19 +22,19 @@ builders:
   new:
     params:
       title: New object for AdminBundle
-      display: ~
+      display: [ element, user, tags ]
       actions:
         list: ~
   edit:
     params:
-      title: "You're editing the object \"%object%\"|{ %object%: YourModel.title }|"
-      display: ~
+      title: "You're editing tags propotions for \"%object%\"|{ %object%: ElementTagsProposition.element.name }|"
+      display: [ element, user, tags ]
       actions:
         list: ~
   show:
     params:
-      title: "You're viewing the object \"%object%\"|{ %object%: YourModel.title }|"
-      display: ~
+      title: "You're editing tags propotions \"%object%\"|{ %object%: ElementTagsProposition.element.name }|"
+      display: [ element, user, tags ]
       actions:
         list: ~
         new: ~
