--- a/src/Muzich/AdminBundle/Resources/config/Admin_event_archive-generator.yml
+++ b/src/Muzich/AdminBundle/Resources/config/Admin_event_archive-generator.yml
@@ -20,20 +20,20 @@ builders:
       display: [ type, user ]
   new:
     params:
-      title: New object for AdminBundle
-      display: ~
+      title: New Event archive
+      display: [ type, user, count]
       actions:
         list: ~
   edit:
     params:
-      title: "You're editing the object \"%object%\"|{ %object%: YourModel.title }|"
-      display: ~
+      title: "You're editing event archive for \"%object%\"|{ %object%: EventArchive.user.username }|"
+      display: [ type, user, count]
       actions:
         list: ~
   show:
     params:
-      title: "You're viewing the object \"%object%\"|{ %object%: YourModel.title }|"
-      display: ~
+      title: "You're editing event archive for \"%object%\"|{ %object%: EventArchive.user.username }|"
+      display: [ type, user, count]
       actions:
         list: ~
         new: ~
