--- a/src/Muzich/AdminBundle/Resources/config/Admin_follow_group-generator.yml
+++ b/src/Muzich/AdminBundle/Resources/config/Admin_follow_group-generator.yml
@@ -13,6 +13,7 @@ builders:
       actions:
         new: ~
       object_actions:
+        show: ~
         edit: ~
         delete: ~
   filters:
@@ -20,20 +21,20 @@ builders:
       display: [ follower, group ]
   new:
     params:
-      title: New object for AdminBundle
-      display: ~
+      title: New object for Group Follow
+      display: [ follower, group ]
       actions:
         list: ~
   edit:
     params:
-      title: "You're editing the object \"%object%\"|{ %object%: YourModel.title }|"
-      display: ~
+      title: "You're editing the object \"%object%\"|{ %object%: FollowGroup.group.name }|"
+      display: [ follower, group ]
       actions:
         list: ~
   show:
     params:
-      title: "You're viewing the object \"%object%\"|{ %object%: YourModel.title }|"
-      display: ~
+      title: "You're viewing the object \"%object%\"|{ %object%: FollowGroup.group.name }|"
+      display: [ follower, group ]
       actions:
         list: ~
         new: ~
