--- a/src/Muzich/AdminBundle/Resources/config/Admin_groups_tags_favorites-generator.yml
+++ b/src/Muzich/AdminBundle/Resources/config/Admin_groups_tags_favorites-generator.yml
@@ -20,20 +20,20 @@ builders:
       display: [ group, tag ]
   new:
     params:
-      title: New object for AdminBundle
-      display: ~
+      title: New Group tag favorite
+      display: [ group, tag ]
       actions:
         list: ~
   edit:
     params:
-      title: "You're editing the object \"%object%\"|{ %object%: YourModel.title }|"
-      display: ~
+      title: "You're editing the object \"%object%\"|{ %object%: GroupsTagsFavorites.group.name }|"
+      display: [ group, tag ]
       actions:
         list: ~
   show:
     params:
-      title: "You're viewing the object \"%object%\"|{ %object%: YourModel.title }|"
-      display: ~
+      title: "You're viewing the object \"%object%\"|{ %object%: GroupsTagsFavorites.group.name }|"
+      display: [ group, tag ]
       actions:
         list: ~
         new: ~
