--- a/src/Muzich/AdminBundle/Resources/config/Admin_users_tags_favorites-generator.yml
+++ b/src/Muzich/AdminBundle/Resources/config/Admin_users_tags_favorites-generator.yml
@@ -20,20 +20,20 @@ builders:
       display: [ user, tag ]
   new:
     params:
-      title: New object for AdminBundle
-      display: ~
+      title: New User tag favorite
+      display: [ user, tag ]
       actions:
         list: ~
   edit:
     params:
-      title: "You're editing the object \"%object%\"|{ %object%: YourModel.title }|"
-      display: ~
+      title: "You're editing an tag favorite \"%object%\"|{ %object%: UsersTagsFavorites.user.username }|"
+      display: [ user, tag ]
       actions:
         list: ~
   show:
     params:
-      title: "You're viewing the object \"%object%\"|{ %object%: YourModel.title }|"
-      display: ~
+      title: "You're viewing the object \"%object%\"|{ %object%: UsersTagsFavorites.user.username }|"
+      display: [ user, tag ]
       actions:
         list: ~
         new: ~
