Admin: Moderate: Gestion des tags

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -121,3 +121,8 @@ MuzichAdminBundle_admin_muzich_admin_bundle_Moderate_element:
     resource: "@MuzichAdminBundle/Controller/Moderate_element/"
     type:     admingenerator
     prefix:   /admin/muzich_admin_bundle/Moderate_element
+
+MuzichAdminBundle_admin_muzich_admin_bundle_Moderate_tag:
+    resource: "@MuzichAdminBundle/Controller/Moderate_tag/"
+    type:     admingenerator
+    prefix:   /admin/muzich_admin_bundle/Moderate_tag
