--- a/src/Muzich/AdminBundle/Resources/config/Admin_presubscription-generator.yml
+++ b/src/Muzich/AdminBundle/Resources/config/Admin_presubscription-generator.yml
@@ -23,12 +23,14 @@ builders:
       title: New Presubscription
       display: [ email ]
       actions:
+        save: ~
         list: ~
   edit:
     params:
       title: "You're editing the object \"%object%\"|{ %object%: Presubscription.email }|"
       display: [ email ]
       actions:
+        save: ~
         list: ~
   show:
     params:
