--- a/src/Muzich/AdminBundle/Resources/config/Admin_follow_user-generator.yml
+++ b/src/Muzich/AdminBundle/Resources/config/Admin_follow_user-generator.yml
@@ -3,7 +3,15 @@ params:
   model: Muzich\CoreBundle\Entity\FollowUser
   namespace_prefix: Muzich
   bundle_name: AdminBundle
-  fields: ~
+  fields:
+    follower:
+      formType: shtumi_ajax_autocomplete
+      formOptions:
+        entity_alias: users
+    followed:
+      formType: shtumi_ajax_autocomplete
+      formOptions:
+        entity_alias: users
 
 builders:
   list:
@@ -24,12 +32,14 @@ builders:
       title: New object for User Follow
       display: [ follower, followed ]
       actions:
+        save: ~
         list: ~
   edit:
     params:
       title: "You're editing following for the object \"%object%\"|{ %object%: FollowUser.followed.username }|"
       display: [ follower, followed ]
       actions:
+        save: ~
         list: ~
   show:
     params:
