--- a/src/Muzich/AdminBundle/Resources/config/Admin_tag-generator.yml
+++ b/src/Muzich/AdminBundle/Resources/config/Admin_tag-generator.yml
@@ -27,6 +27,7 @@ builders:
       display:
         "General" : [ name ]
       actions:
+        save: ~
         list: ~
   edit:
     params:
@@ -34,6 +35,7 @@ builders:
       display:
         "General" : [ name ]
       actions:
+        save: ~
         list: ~
   show:
     params:
