--- a/src/Muzich/AdminBundle/Resources/config/Admin_users_tags_favorites-generator.yml
+++ b/src/Muzich/AdminBundle/Resources/config/Admin_users_tags_favorites-generator.yml
@@ -3,7 +3,15 @@ params:
   model: Muzich\CoreBundle\Entity\UsersTagsFavorites
   namespace_prefix: Muzich
   bundle_name: AdminBundle
-  fields: ~
+  fields:
+    user:
+      formType: shtumi_ajax_autocomplete
+      formOptions:
+        entity_alias: users
+    tag:
+      formType: shtumi_ajax_autocomplete
+      formOptions:
+        entity_alias: tags
 
 builders:
   list:
@@ -23,12 +31,14 @@ builders:
       title: New User tag favorite
       display: [ user, tag ]
       actions:
+        save: ~
         list: ~
   edit:
     params:
       title: "You're editing an tag favorite \"%object%\"|{ %object%: UsersTagsFavorites.user.username }|"
       display: [ user, tag ]
       actions:
+        save: ~
         list: ~
   show:
     params:
