Evolution #601: Admin: re-création: Réecriture des tests fonctionnels pour la modération.

--- a/src/Muzich/AdminBundle/Resources/config/Moderate_element-generator.yml
+++ b/src/Muzich/AdminBundle/Resources/config/Moderate_element-generator.yml
@@ -20,7 +20,7 @@ builders:
           ToModerate: 
             default: true
             filters: 
-              count_report: true
+              reported: true
   filters:
     params:
       fields: ~
