Evolution #169: Interface d'aide: Utilisation de aSimpleTour (plugin jquery) pour mise en place tour de visite

--- a/src/Muzich/UserBundle/Resources/config/routing.yml
+++ b/src/Muzich/UserBundle/Resources/config/routing.yml
@@ -55,3 +55,8 @@ user_update_preferences:
   requirements:
     _method:  POST
   
+user_hide_help:
+  pattern: /account/update-help/hide/{help_id}/{token}
+  defaults: { _controller: MuzichUserBundle:User:updateHelpViewed }
+  requirements:
+    _method:  POST
