Evolution #618: Tests: base indé: Configuration pour que les tests puissent tourner sur une base de donnée indépendante.

--- a/app/config/config_test.yml
+++ b/app/config/config_test.yml
@@ -14,5 +14,16 @@ web_profiler:
 swiftmailer:
     disable_delivery: true
 
+# Doctrine Configuration
+doctrine:
+    dbal:
+        driver:   %database_driver%
+        host:     %database_host%
+        port:     %database_port%
+        dbname:   muzich_test
+        user:     %database_user%
+        password: %database_password%
+        charset:  utf8
+
 parameters:
     env: test
