Evolution #639: admin: PROD: err 500: Rappatriment du dashboard vers le code de muzich.

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -50,7 +50,7 @@ MuzichCommentBundle:
   
 AdmingeneratorDashboard_welcome:
     pattern: /admin/dashboard
-    defaults: { _controller: AdmingeneratorGeneratorBundle:Dashboard:welcome }
+    defaults: { _controller: MuzichAdminBundle:Dashboard:welcome }
 
 shtumi_useful:
     resource: '@ShtumiUsefulBundle/Resources/config/routing.xml'
