Anomalie #640: PROD/ mail d'erreur ?: modification de la configuration: Retrait de la mise en spool : memory pour swift_mailer car en conflit avec monolog pour l'envoie des mails d'erreurs.

--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -26,9 +26,9 @@ monolog:
             handler: swift
         swift:
             type:       swift_mailer
-            from_email: error@smuzi.ch
+            from_email: noreply@muzi.ch
             to_email:   sevajol.bastien@gmail.com
-            subject:    An Error Occurred on muzi.ch!
+            subject:    An Error Occurred (muzi.ch)!
             level:      debug
 
 parameters:
