--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -11,7 +11,7 @@ web_profiler:
     
 swiftmailer:
     transport:  smtp
-    username:   noreply@muzi.ch
+    username:   contact@muzi.ch
     password:   ***REMOVED***
     host:       mx.muzi.ch
     port:       587
