Anomalie #667: Identifiant (login): Possibilité de s'identifié avec l'email

--- a/src/Muzich/CoreBundle/Resources/config/security.yml
+++ b/src/Muzich/CoreBundle/Resources/config/security.yml
@@ -5,7 +5,7 @@ parameters:
 security:
     providers:
         fos_userbundle:
-            id: fos_user.user_manager
+            id: fos_user.user_provider.username_email
     encoders:
         "FOS\UserBundle\Model\UserInterface":
             algorithm: sha512
