Evolution #582: Implémenter le mode nopass Le pseudo en haut a droite est cliquable et le renvois sur une page/formulaire lui permettant de changer son pseudonyme. (l'utilisateur ne peux le faire q'une fois)

--- a/src/Muzich/UserBundle/Resources/config/routing.yml
+++ b/src/Muzich/UserBundle/Resources/config/routing.yml
@@ -64,3 +64,7 @@ user_hide_help:
 subscribe_or_login:
   pattern: /ajax/subscribe-or-login
   defaults: { _controller: MuzichUserBundle:User:subscribeOrLogin }
+
+change_username:
+  pattern: /account/username/update
+  defaults: { _controller: MuzichUserBundle:User:changeUsername }
