Evolution #404: Inscription: confirmation de l'email et conséquences
Mise en place du système de SecurityContext et du javascript afin d'ouvrir l'ecran de confirmation de l'email.
Fait pour : proposition de tag

--- a/src/Muzich/UserBundle/Resources/config/routing.yml
+++ b/src/Muzich/UserBundle/Resources/config/routing.yml
@@ -76,3 +76,12 @@ subscribe_or_login:
 change_username:
   pattern: /account/username/update
   defaults: { _controller: MuzichUserBundle:User:changeUsername }
+
+email_not_confirmed:
+  pattern: /account/email-not-confirmed
+  defaults: { _controller: MuzichUserBundle:User:showEmailNotConfirmed }
+
+send_email_confirmation:
+  pattern: /account/send-email-confirmation
+  defaults: { _controller: MuzichUserBundle:User:sendEmailConfirm }
+    
