Evolution #687: Tags: bouton enlever tous + boutons favoris

--- a/src/Muzich/CoreBundle/Resources/config/routing.yml
+++ b/src/Muzich/CoreBundle/Resources/config/routing.yml
@@ -49,8 +49,8 @@ filter_mytags:
   defaults: { _controller: MuzichCoreBundle:Core:filterMytags }
 
 ajax_get_favorites_tags:
-  pattern: /ajax/my-favorites-tags
-  defaults: { _controller: MuzichCoreBundle:Core:getDefaultTags }
+  pattern: /ajax/my-favorites-tags/{favorites}
+  defaults: { _controller: MuzichCoreBundle:Core:getDefaultTags, favorites: false }
 
 ajax_add_tag:
   pattern: /ajax/add-tag
