Evolution #703: Inscription: choix des tags favoris

--- a/src/Muzich/UserBundle/Resources/config/routing.yml
+++ b/src/Muzich/UserBundle/Resources/config/routing.yml
@@ -84,4 +84,8 @@ email_not_confirmed:
 send_email_confirmation:
   pattern: /account/send-email-confirmation
   defaults: { _controller: MuzichUserBundle:User:sendEmailConfirm }
+
+helpbox_tags_favorites:
+  pattern: /account/favorites-tags
+  defaults: { _controller: MuzichUserBundle:User:favoriteTagsHelpbox }
     
