Anomalie #718: Page d'eereur: liens non connecté
Mise en place d'un layout adapté lors de l'affichage des erreurs.

--- a/src/Muzich/CoreBundle/Resources/config/routing.yml
+++ b/src/Muzich/CoreBundle/Resources/config/routing.yml
@@ -88,7 +88,7 @@ info_cgu:
   
 test_errors:
   pattern: /info/test-error/{code}
-  defaults: { _controller: MuzichCoreBundle:Info:testError }
+  defaults: { _controller: MuzichCoreBundle:Info:testError, code: null }
   
 ### helper
 
